# Multi-rate_recurrent_recurrence_hine

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
configs/: config.yaml
configs/ablations/: circularity_confirm.yaml  fno_1step.yaml  hine_no_recurrence.yaml  no_consistency.yaml  no_contraction.yaml  no_multirate.yaml  no_topdown.yaml  no_warmup.yaml  single_scale.yaml  unet_1step.yaml
configs/data/: data_kolmogorov.yaml
configs/model/: model_fno.yaml  model_msr_hine.yaml  model_unet_1step.yaml
data/kolmogorov/: lyapunov_estimate.json  norm_stats.json
docs/: CHANGES_FROM_DESIGN.md  CONTRIBUTING.md  DESIGN.md
outputs/ablations/: results_table.csv
outputs/ablations/circularity_confirm/: metrics.json
outputs/paper_figures_v5/: table1_rollout_rmse.csv  table1_rollout_rmse.tex  table2_summary_metrics.csv  table2_summary_metrics.tex  table3_ablations.csv  table3_ablations.tex  table4_param_counts.csv  table4_param_counts.tex  table5_timing.csv  table5_timing.tex  timing.json
scripts/: aggregate_results.py  estimate_lyapunov.py  generate_tables.py  measure_timing.py  plot_1d_trajectories.py  plot_ablations.py  plot_dataset_sanity.py  plot_multiscale.py  plot_results.py  plot_trajectories.py  run_ablations.sh
src/msr_hine/: __init__.py  losses.py  metrics.py  rollout.py  train.py  utils.py
src/msr_hine/data/: __init__.py  (+3 more)
tests/: test_ablations.py  test_backbones.py  test_dataset.py  test_hine.py  test_import.py  test_losses_train.py  test_metrics.py  test_msr_hine.py  test_solver.py  test_train_eval.py  test_truncation.py
(+24 files in other folders)
