[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msr_hine"
version = "0.1.0"
description = "Multiscale Recurrent Hierarchical Implicit Neural Emulator for 2D Kolmogorov flow"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy",
    "scipy",
    "h5py",
    "hydra-core>=1.3",
    "einops",
    "matplotlib",
    "pytest",
]

[project.optional-dependencies]
wandb = ["wandb"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
